syntax = "proto3";

option go_package = "./proto";

package user_service;

service userService {
    rpc addUser(User) returns(UserID);
    rpc retrieveOneUser(UserID) returns(User);
    rpc retrieveMultipleUsers(UserIDList) returns(UserList);
    rpc searchUsers(UserSearchCriteria) returns(UserList);
}

message User {
    string id = 1;
    string fname = 2;
    string city = 3;
    string phone = 4;
    float height = 5;
    bool ismarried = 6;
}

message UserSearchCriteria {
    string fname = 1;
    string city = 2;
    string phone = 3;
    float height = 4;
    bool ismarried = 5;
}

message UserID {
    string id = 1;
}

message UserIDList {
    repeated string ids = 1;
}

message UserList {
    repeated User users = 1;
}
